Ajout des liens tarifs et contact + addresse mail, instagram et facebook

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav>
             <a href="#accueil" title="Page d'accueil">Accueil</a>
             <a href="#loisirs" title="Page de loisirs">Loisirs</a>
-            <a href="#tarifs" title="Page de tarifs">Tarifs</a>
-            <a href="#Contact" title="Page de contact">Contact</a>
+            <a href="#tarif" title="Page de tarifs">Tarifs</a>
+            <a href="#contact" title="Page de contact">Contact</a>
         </nav>
         <section class="hero-section">
             <h1 class="main-heading">Découvrez Kyoto</h1>
@@ -176,19 +176,19 @@
         <section class="contact" id="contact">
             <div class="rounded-contact">
                 <p class="surtitle">Partageons de bons moments !</p>
-                <h2 class="heading-2">Voilà où tu peux me contacter</h2>
+                <h2 class="heading-2">Voilà où vous pouvez me contacter</h2>
 
                 <ul class="contact-list">
                     <li>
-                        <span>kyoto_tour@gmail.com</span>
+                        <span>nathanprofessionnel1609@gmail.com</span>
                         <img src="./asset/img/icons/email-envelope.svg" alt="email">
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/" target="_blank" title="Lien vers la page instagram">kyoto_tour_IG</a>
+                        <a href="https://www.instagram.com/decrayenathan/" target="_blank" title="Lien vers la page instagram">decraye_nathan</a>
                         <img src="./asset/img/icons/instagram.svg" alt="instagram logo">
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/?locale=fr_FR" target="_blank" title="Lien vers la page Facebook">kyoto_tour_FB</a>
+                        <a href="https://www.facebook.com/nathan.decraye" target="_blank" title="Lien vers la page Facebook">Nathan Decraye</a>
                         <img src="./asset/img/icons/facebook.svg" alt="facebook logo">
                     </li>
                 </ul>
