Modification du texte latin par dfaut avec du français + changements des boutons activités contact par le texte japonais

--- a/index.html
+++ b/index.html
@@ -21,14 +21,7 @@
         </nav>
         <section class="hero-section">
             <h1 class="main-heading">Découvrez Kyoto</h1>
-            <button class="hero-btn hero-btn-1">
-                <span>Activités</span>
-                <img src="./asset/img/icons-pack/016-origami.svg" alt="">
-            </button> 
-            <button class="hero-btn hero-btn-2">
-                <span>Contact</span>
-                <img src="./asset/img/icons-pack/049-japan.svg" alt="">
-            </button> 
+            <h2 class="main-heading">を日本語に翻訳します</h2>
         </section>
     </header>
 
@@ -47,7 +40,7 @@
                     <img src="./asset/img/temple-activity.jpg" alt="temples">
                     <div class="activity-description">
                         <h3 class="activity-heading">Visitez de splendides temples.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolorum sed iste expedita dolores, qui ipsum officia saepe corrupti exercitationem neque maiores rem temporibus quis consequatur quo dolore, illum tempore!</p>
+                        <p>Kyoto, l'ancienne capitale impériale du Japon, est une ville où l'histoire, la culture et la beauté naturelle se mêlent harmonieusement. Parmi ses trésors les plus précieux, les temples de Kyoto se distinguent par leur splendeur et leur sérénité. Voici une invitation à explorer ces sanctuaires majestueux qui captivent l'âme et l'esprit.</p>
                         <a href="#contact" class="activity-link">Plannifier un tour</a>
                     </div>
                 </div>
@@ -55,7 +48,7 @@
                 <div class="activity-container activity-2">
                     <div class="activity-description">
                         <h3 class="activity-heading">Dégustez de délicieux mets.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus non modi explicabo doloremque reiciendis ad quia iusto eaque suscipit magni aut facilis, nostrum ullam doloribus! Corporis perferendis hic totam.</p>
+                        <p>Kyoto, ville emblématique du Japon, est non seulement célèbre pour ses temples et ses jardins, mais aussi pour sa cuisine raffinée. Les traditions culinaires de Kyoto, riches en saveurs et en histoire, offrent une expérience gastronomique inoubliable. Voici un guide pour découvrir et déguster les délices culinaires de cette ville enchanteresse.</p>
                         <a href="#contact" class="activity-link">Plannifier un tour</a>
                     </div>
                     <img src="./asset/img/asian-food.jpg" alt="nourritures asiatiques">
@@ -65,7 +58,7 @@
                     <img src="./asset/img/japan-life.jpg" alt="rue japonaise">
                     <div class="activity-description">
                         <h3 class="activity-heading">Vivez comme un local.</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cupiditate voluptatem aperiam! Mollitia nulla saepe vitae architecto quibusdam voluptas velit explicabo libero sed, aperiam facere placeat, beatae ut molestias corrupti!</p>
+                        <p>Kyoto, l'ancienne capitale du Japon, est une ville où le passé et le présent coexistent harmonieusement. Pour découvrir la véritable essence de cette ville magique, il faut aller au-delà des sites touristiques et vivre comme un local. Voici un guide pour vous immerger dans la vie quotidienne des habitants de Kyoto et apprécier la culture locale sous toutes ses facettes.</p>
                         <a href="#contact" class="activity-link">Plannifier un tour</a>
                     </div>
                 </div>
