Correction de l'orthographe

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="activity-description">
                         <h3 class="activity-heading">Visitez de splendides temples.</h3>
                         <p>Kyoto, l'ancienne capitale impériale du Japon, est une ville où l'histoire, la culture et la beauté naturelle se mêlent harmonieusement. Parmi ses trésors les plus précieux, les temples de Kyoto se distinguent par leur splendeur et leur sérénité. Voici une invitation à explorer ces sanctuaires majestueux qui captivent l'âme et l'esprit.</p>
-                        <a href="#contact" class="activity-link">Plannifier un tour</a>
+                        <a href="#contact" class="activity-link">Planifier un tour</a>
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
                     <div class="activity-description">
                         <h3 class="activity-heading">Dégustez de délicieux mets.</h3>
                         <p>Kyoto, ville emblématique du Japon, est non seulement célèbre pour ses temples et ses jardins, mais aussi pour sa cuisine raffinée. Les traditions culinaires de Kyoto, riches en saveurs et en histoire, offrent une expérience gastronomique inoubliable. Voici un guide pour découvrir et déguster les délices culinaires de cette ville enchanteresse.</p>
-                        <a href="#contact" class="activity-link">Plannifier un tour</a>
+                        <a href="#contact" class="activity-link">Planifier un tour</a>
                     </div>
                     <img src="./asset/img/asian-food.jpg" alt="nourritures asiatiques">
                 </div>
@@ -59,7 +59,7 @@
                     <div class="activity-description">
                         <h3 class="activity-heading">Vivez comme un local.</h3>
                         <p>Kyoto, l'ancienne capitale du Japon, est une ville où le passé et le présent coexistent harmonieusement. Pour découvrir la véritable essence de cette ville magique, il faut aller au-delà des sites touristiques et vivre comme un local. Voici un guide pour vous immerger dans la vie quotidienne des habitants de Kyoto et apprécier la culture locale sous toutes ses facettes.</p>
-                        <a href="#contact" class="activity-link">Plannifier un tour</a>
+                        <a href="#contact" class="activity-link">Planifier un tour</a>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <span class="plan-name">Basique</span>
                     <span class="plan-line"></span>
                     <span class="plan-price">20€</span></h3>
-                  <p class="card-subtitle">Lorem ipsum dolor sit amet.</p>
+                  <p class="card-subtitle">Pour vous amusez en journée !</p>
                   <ul>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
@@ -88,7 +88,7 @@
                     </li>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
-                      <span>Sites sacrées.</span>
+                      <span>Sites sacrés.</span>
                     </li>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
@@ -105,7 +105,7 @@
                   <span class="plan-line"></span>
                   <span class="plan-price">75€</span>
                 </h3>
-                  <p class="card-subtitle">Lorem ipsum dolor sit amet.</p>
+                  <p class="card-subtitle">Pour les mordus d'aventure !</p>
                   <ul>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
@@ -113,7 +113,7 @@
                     </li>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
-                      <span>Sites sacrées.</span>
+                      <span>Sites sacrés.</span>
                     </li>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
@@ -141,7 +141,7 @@
                     <span class="plan-line"></span>
                     <span class="plan-price">45€</span>
                   </h3>
-                  <p class="card-subtitle">Lorem ipsum dolor sit amet.</p>
+                  <p class="card-subtitle">Pour vous amusez avec une visite nocturne !</p>
                   <ul>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
@@ -149,7 +149,7 @@
                     </li>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
-                      <span>Sites sacrées.</span>
+                      <span>Sites sacrés.</span>
                     </li>
                     <li>
                       <img src="./asset/img/icons/checked-curly.svg" alt="">
@@ -169,7 +169,7 @@
         <section class="contact" id="contact">
             <div class="rounded-contact">
                 <p class="surtitle">Partageons de bons moments !</p>
-                <h2 class="heading-2">Voilà où vous pouvez me contacter</h2>
+                <h2 class="heading-2">N'hésitez pas à me contacter !</h2>
 
                 <ul class="contact-list">
                     <li>
